--- a/client/app/contact-us/contact-us.scss
+++ b/client/app/contact-us/contact-us.scss
@@ -46,6 +46,7 @@ button.big-button {
   margin-left: 150px;
   margin-bottom: -30px;
   padding: 10px 20px 5px;
+  background-color: $color-secondary-button !important;
   -webkit-transition: background 300ms ease-in-out;
      -moz-transition: background 300ms ease-in-out;
       -ms-transition: background 300ms ease-in-out;
@@ -110,6 +111,21 @@ button.big-button:hover svg * {
     float: none;
     button {
       margin-left: 0;
+    }
+    .form-control {
+      color: $color-secondary-dark;
+    }
+    .form-control::-webkit-input-placeholder {
+      color: $color-secondary-dark;
+    }
+    .form-control:-moz-placeholder { /* Firefox 18- */
+      color: $color-secondary-dark;  
+    }
+    .form-control::-moz-placeholder {  /* Firefox 19+ */
+      color: $color-secondary-dark;  
+    }
+    .form-control:-ms-input-placeholder {  
+      color: $color-secondary-dark;  
     }
   }
 }
