--- a/client/app/expertise/expertise.scss
+++ b/client/app/expertise/expertise.scss
@@ -140,6 +140,7 @@
         display: block;
         svg {
           margin: 0 0 -3px 10px;
+          stroke: $color-secondary-dark;
         }
       }
     }
