--- a/client/app/references/references.scss
+++ b/client/app/references/references.scss
@@ -99,7 +99,7 @@
   .reference-info-projects {
     bottom: -45px;
     ul li {
-      color: rgba(195, 195, 195, 1);
+      color: $color-secondary-dark;
     }
   }
 }
